--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Package specific
+config/private.*
+config/*/private.*
+config/certs/*.*
+bin/
+tmp/
+debug/
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -13,3 +21,4 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
